--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,16 +1,25 @@
 spring.application.name=back-end
 
-spring.datasource.url=jdbc:mysql://<mysql_host>/cms?usessl=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://172.21.35.175/cms?usessl=false
 spring.datasource.username=root
 
-spring.datasource.password=<mysql_password>
+spring.datasource.password=2pMAnae39mcrzMas8KjV91wA
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
-spring.data.mongodb.uri=mongodb://root:<mongodb_password>@<mongodb_host>:27017/prescriptions?authSource=admin"
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=prescriptions
+# If using authentication:
+# spring.data.mongodb.username=YOUR_MONGO_USERNAME
+# spring.data.mongodb.password=YOUR_MONGO_PASSWORD
+
+spring.data.mongodb.uri=mongodb://root:4NKk1bdCvfHfbwkiHxNdnWQW@172.21.252.88:27017/prescriptions?authSource=admin"
 
 management.endpoint.health.show-details=always
 management.health.db.enabled=true
